// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store with simple reducer should fail with error when waiting for caller which will not be called 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitForCall: Name - empty"
`;

exports[`store with simple reducer should fail with error when waiting for unknown action 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitForActionType: Type - unknown"
`;

exports[`store with simple reducer should fail with error when waiting for unreachable condition 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitFor: Condition name - "
`;

exports[`store with simple reducer should fail with error when waiting longer than error timeout 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitForMs: Ms - 10000, Callback - empty"
`;

exports[`store with simple reducer should fail with error when waiting unreachable state 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitForStoreState: Condition name - "
`;

exports[`store with simple reducer should fail with error when waiting unresolvable promise 1`] = `
"Timeout has expired

Caught actions: 


Effects: 
waitForPromise: Promise"
`;

exports[`store with simple reducer should fail with timeout when waiting for dispatched action 1`] = `
"Timeout has expired

Caught actions: 
default/setA

Effects: 
dispatchAction: Action type - default/setA
waitForActionType: Type - default/setA"
`;

exports[`store with simple reducer should fail with timeout when waiting for dispatched action after waiting promise 1`] = `
"Timeout has expired

Caught actions: 
default/setA

Effects: 
waitForPromise: Promise
dispatchAction: Action type - default/setA
waitForActionType: Type - default/setA"
`;

exports[`store with simple reducer should fail with timeout when waiting for dispatched action after waiting several ms 1`] = `
"Timeout has expired

Caught actions: 
default/setA

Effects: 
waitForMs: Ms - 10, Callback - empty
dispatchAction: Action type - default/setA
waitForActionType: Type - default/setA"
`;

exports[`store with simple reducer should not catch action dispatched by store tester 1`] = `
"Timeout has expired

Caught actions: 
default/setA

Effects: 
dispatchAction: Action type - default/setA
waitForActionType: Type - default/setA"
`;
